Big update - camera module done
Finished the camera module.
Character Detection and Recognition works. Used chaquopy to communicate with a Python script that applies the SSIM algorithm.

Configuration that needs to be done for final merge:

1. Update Android Studio to BumbleBee.
2. Set up chaquopy: https://chaquo.com/chaquopy/doc/current/android.html
3. Set up OpenCV:  https://www.androidbugfix.com/2021/12/how-to-import-opencv-45-in-android.html

--- a/Character detection and recognition/DetectionModule/app/build.gradle
+++ b/Character detection and recognition/DetectionModule/app/build.gradle
@@ -18,6 +18,13 @@ android {
             abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
 
+        python{
+            pip{
+                install "opencv-python"
+                install "scikit-image"
+            }
+        }
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
