--- a/Scrabble-Computer-vision/build.gradle
+++ b/Scrabble-Computer-vision/build.gradle
@@ -1,4 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+        maven { url "https://chaquo.com/maven" }
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.0.4"
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
@@ -6,12 +21,6 @@ plugins {
     id 'com.chaquo.python' version '11.0.0' apply false
 }
 
-//task clean(type: Delete) {
-//    delete rootProject.buildDir
-//}
-//repositories {
-//    mavenCentral()
-//}
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
